# EZ-Game-Audio

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cpuNumber.rs  main.rs  my_utils.rs
src-tauri/src/my_utils/: emit_all.rs
src/Components/Backend/: convert.js  convert.rs  convert.ts  converter.js  converter.rs  converter.ts  converter.ts.bak  converterFiles.ts  converterWorker.ts  createConversionList.ts  deleteDups.ts  folderSelect.ts  handlePendingChanges.ts  playMidi.js  playMidi.ts  searchFiles.js  searchFiles.ts  searchFliles.test.js  utils.ts
src/Components/UI/: ColorSchemeContext.tsx  Header.tsx  Loading.d.ts  Loading.tsx  SwitchTheme.tsx
src/Components/UI/1Home/: CheckBoxes.tsx  FilePathComponent.tsx  InputFormatComponent.tsx  OutputFormatComponent.tsx  StartButton.tsx
src/Components/UI/2Input/: DuplicateDialog.tsx  FilesToConvert.tsx  NextButton.tsx  RemovedFiles.tsx  Settings.tsx  SettingsComponent.tsx
src/Components/UI/3Output/: ConflictDialog.tsx  ConvertButton.tsx  DuplicateWarning.tsx  FinalList.tsx
src/Components/UI/4Finished/: Error.tsx  FinishedReport.tsx
src/Components/UI/XNotUsed/: ActionToggle.module.css  ActionToggle.tsx  ButtonProgress.module.css  ButtonProgress.tsx  SplitButton.Module.css  SplitButton.tsx
src/Pages/: Finished.tsx  HomePage.tsx  Input.tsx  Output.tsx
src/_codux/boards/: settings.board.tsx
