[package]
name = "ez-game-audio"
version = "0.0.0"
description = "EZ And Fast Way To Convert Audio To Other Formats."
authors = ["Fooney"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]

tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.34"
tauri-utils = "1.5.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
